[package]
name = "spoke-lending"
version = "0.1.0"
description = "Cross-chain spoke lending protocol — Solana side of a hub-and-spoke architecture"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "spoke_lending"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
